--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   equatable: ^2.0.5
   build_runner: ^2.3.3
   json_annotation: ^4.7.0
+  firebase_auth: ^4.6.3
 
 
 dev_dependencies:
